# tp2-deeplearningonimages-tpcg2

./: README.md  convolution.ipynb  pyproject.toml  rapport.py
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
tests/: test_all.py
